Fixed overflowing width for images on individual blog posts

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -311,6 +311,14 @@ input[type="submit"]
    background-color: black;
 }
 
+.wp-caption[style]
+{
+   @media (max-width: @screen-sm-min)
+   {
+      width: 100% !important;
+   }
+}
+
 .wp-caption img
 {
    border: 1px solid #333;
